tried fixing the spacing ont he form...

--- a/wwr/styles/contact_us_rafting.css
+++ b/wwr/styles/contact_us_rafting.css
@@ -253,10 +253,18 @@ form {
     border: none;
 }
 
+.form-section {
+    display: flex;
+    justify-content: center;
+    padding: 2rem 0;
+}
+
 .form-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    max-width: 750px;
 }
 
 fieldset {
